# IAS2026

./: .gitignore  Cargo.toml
crates/: functionlist.txt
crates/audreysandboxcrate/: Cargo.toml
crates/audreysandboxcrate/src/: main.rs
crates/mdwsandboxcrate/: Cargo.toml
crates/mdwsandboxcrate/src/: main.rs
crates/newtriangleviewer/: Cargo.toml
crates/newtriangleviewer/src/: main.rs
crates/subtractioncore/: Cargo.toml
crates/subtractioncore/src/: colortype.rs  hexagon.rs  lib.rs  line.rs  matrix.rs  newutilities.rs  nimsequence.rs  point.rs  recursivetriangle.rs  region.rs  regiontype.rs  triangle.rs  visualizertype.rs
