[package]
name = "mdwsandboxcrate"
version = "0.1.0"
edition = "2024"

[dependencies]
subtractioncore = { version = "0.1.0", path = "../subtractioncore" }
eframe = { version = "0.35.0",
           default-features = false,
	   features = [ "default_fonts", "glow", "persistence", "x11" ] }
egui = { version = "0.35.0", default-features = false }
egui_plot = "0.36.0"
